@@ -10,7 +10,8 @@ Bug fixes:
   * mongoc_change_stream_next now reports an error if the resume token (_id) is
     not a document. Previously, an error was only reported if the field was
     missing.
-  * mongoc_collection_update with MONGOC_UPDATE_MULTI_UPDATE would fail if
+  * mongoc_collection_update with MONGOC_UPDATE_MULTI_UPDATE,
+    mongoc_collection_remove, and mongoc_collection_delete would fail if
     retryWrites was enabled.
 
 mongo-c-driver 1.14.0
